--- a/main.css
+++ b/main.css
@@ -1,6 +1,3 @@
-body {
-	background-color: #80D9FF;
-}
 h1 {
 	color: #FF33FF;
 	background-color: black;
@@ -24,16 +21,16 @@ h2 {
 }
 p {
 	color: blue;
-	background-color: yellow;
+	background-color: #E6E6FA;
 	font-family: "Lucida Sans Unicode";
 	border-style: inset;
 	border-width: 3px;
 	border-color: blue;
-	text-shadow: 1px 1px red;
+	text-shadow: 2px 2px yellow;
 }
 footer {
 	color: red;
-	background-color: green;
+	background-color: black;
 	font-family: "Trebuchet MS";
 	border-style: outset;
 	border-width: 3px;
